--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,23 @@
 	background-color: #fefc01;
 	height: 100vh;
 }
+
+.app__body {
+	background: url('https://www.pngkey.com/png/full/859-8598072_picture-freeuse-library-silhouette-mobile-at-getdrawings-cell.png')
+		no-repeat center;
+	background-size: contain;
+	height: 400px;
+	width: 250px;
+	padding: 73px;
+}
+
+.app__bodyBackground {
+	background-color: white;
+	height: 400px;
+}
+
+.app__logo {
+	object-fit: contain;
+	height: 60px;
+	margin-bottom: 20px;
+}
