--- a/src/components/Chats.css
+++ b/src/components/Chats.css
@@ -53,3 +53,28 @@
 	flex: 1;
 	padding-left: 8px;
 }
+
+.chats__takePicIcon {
+	position: absolute;
+	background-color: white;
+	border-radius: 200px;
+	color: gray;
+	font-size: 40px !important;
+	cursor: pointer;
+	bottom: 0;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.chats__searchIcon {
+	color: white;
+	font-size: 15px !important;
+}
+
+.chats__chatIcon {
+	color: white;
+}
+
+.chats__takePicIcon:hover {
+	opacity: 0.8;
+}
